2004-03-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-head.cc (brew_ez_stencil): read vector note-names to
	determine ez-notation letter. 

	* lily/system.cc (get_line): start with dumping layer 3. This
	fixes ez notation.

2004-03-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-book.cc (pages): Bugfix: copy_height and tag_height
	diff values are negative.

	* Documentation/user/lilypond.tely (direntry): Add note about why
	`info lilypond' brings up `Invoking LilyPond' node.

2004-03-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: Mutopia tagline.

	* lily/paper-book.cc: Remove cruft.
	(output): Bugfix: put vfill between lines.
	(pages): Bugfix: set page vars needed for filling.

	* Documentation/user/music-glossary.tely: Compile fix: Use @arrow
	(was: @ar).

	* scm/page-layout.scm: Further development.

	* ly/declarations-init.ly (paper): Define page-breaking.

2004-03-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-head.cc (brew_ez_stencil): add note-names
	property. Provides internationalization for note names.

	* Documentation/user/changing-defaults.itely (Creating contexts):
	new node.

	* lily/grace-iterator.cc (process): descend to child for \grace.

	* lily/timing-translator.cc (initialize): Timing_translator adds
	Timing alias by itself.

	* lily/context.cc (add_alias): new function.

	* scm/lily.scm (tex-output-expression): new function, eval within
	drawing API. Guards against eval vulnerabilities.

	* scm/output-tex.scm (tex-encoded-fontswitch): idem. 

	* scm/output-ps.scm (scm): export lily drawing API.

	* lily/include/lily-guile.hh (ly_scheme_function): new macro. Use
	throughout.

2004-03-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/page-layout.scm (optimal-page-breaking): New function.
	
	* lily/paper-book.cc (pages): Use it.

2004-03-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/paper-line.hh (class Paper_line): Full smob.
