@@ -36,9 +36,11 @@ LY_DEFINE (ly_translator_description, "ly:translator-description",
 int
 Translator::print_smob (SCM s, SCM port, scm_print_state *)
 {
-  Translator *sc = (Translator*) ly_cdr (s);
+  Translator *me = (Translator*) ly_cdr (s);
   scm_puts ("#<Translator ", port);
-  scm_puts (classname (sc), port);
+  scm_puts (classname (me), port);
+  scm_display (me->simple_trans_list_, port);
+  
   scm_puts (" >", port);
   return 1;
 }
